# rs-player

./: Cargo.toml
.github/workflows/: publish.yml  test.yml
src/: main.rs  player.rs  server.rs
