[package]
name = "rs-player"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite="0.11.0"
json = "0.12.4"

[dependencies.clap]
version = "2.33.1"
default-features = false